--- a/frontend/src/app/ui/projects/projects.component.css
+++ b/frontend/src/app/ui/projects/projects.component.css
@@ -10,9 +10,9 @@ h1, h2, h3, h4, h5, h6, p{
     margin: 0;
 }
 
-.projects-content{
+.projects-content {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 360px);
+    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
     gap: 2rem;
     margin: 3em 0;
     padding-bottom: 4rem;
